Fixing fit to height
- Fixing height calc to account for horizontal scroll bar height.

--- a/UI/Web/src/_manga-reader-common.scss
+++ b/UI/Web/src/_manga-reader-common.scss
@@ -12,7 +12,7 @@ img {
   }
 
   &.full-height {
-    height: 100vh;
+    height: calc(100vh - 34px);
     display: flex; // changed from inline-block to fix the centering on tablets not working
   }
 
